samples/_failures_safe/1761698340_630d2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_832f7db0.c: In function ‘main’:
./samples/SAFE/__tmp_832f7db0.c:129:5: error: expected declaration or statement at end of input
  129 |     if (file == NULL) {
      |     ^~
./samples/SAFE/__tmp_832f7db0.c:129:5: error: expected declaration or statement at end of input
